# mat-ai

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  benchmark.md  docker-compose.yml  instruction.md  main.py  main_get_emails.py  main_parse_email.py  pyproject.toml  pytest.ini  todo.md
.github/workflows/: create-image.yml  test-workflow.yml
db/: init_db_postgres.sql  init_db_sqlite.sql
features/: authenticate.feature  retrieve_new_action_items.feature
features/steps/: authentication_steps.py  retrieve_new_action_items_steps.py
src/benchmark/: dataset.py
src/cli/: cli.py
src/configuration/: __init__.py  application_configuration.py  configuration_service.py
src/gui/: main_gui.py
src/matai/benchmark/: __init__.py  cli.py  dataset.py
src/matai/commands/: process_new_emails_command.py
src/matai/common/: logging.py
src/matai/dao/: __init__.py  interface.py
src/matai/dao/sqlite/: __init__.py  sqlite_dao.py
src/matai/email_client/: interface.py  o365_client.py
src/matai/email_processing/: model.py  parser.py  processor.py
src/matai/integrations/: integration_manager.py  trello.py
src/matai/manager/: dao.py  manager.py  models.py  sqlite_dao.py
src/matai_v2/: __init__.py  benchmark.py  cli.py  configuration.py  context.py  email.py  logging.py  parser.py  processor.py  store.py  tmp.py  trello.py
tests/: benchmark_mantis.xlsx  conftest.py  test_application_context.py  test_benchmark.py  test_cases.jsonl  test_cli_commands.py  test_config.py  test_configuration.py  test_configuration_service.py  test_matai_models.py  test_parser.py  test_processor.py  test_store.py  test_trello.py
tests/benchmark/: test_cli.py  test_dataset.py
tests/dao/: test_dao.py
tests/email_processing/: message_dump_anonymized.json  test_benchmark.py  test_html_parser.py  test_manager.py  test_model.py  test_parser.py  test_processor.py
tests/matai/commands/: test_process_new_emails_command.py
tests/matai/email_processing/: test_action_item_model.py  test_email_content_model.py
