[project]
name = "matai"
version = "0.1.0"
description = "Matai is a Python‐based “email to action‐item” automation framework. It can connect to your inbox (via O365), fetch and clean raw emails, and—using an OpenAI LLM—extract structured action items (type, description, due date, owners, etc.). Extracted emails and tasks are stored in a SQLite database, and actionable items can be posted automatically to a Trello board. All connection details (email, board, filters, LLM credentials) live in a YAML config, and you can drive the system via a CLI (e.g. “process-new-emails”, “list-action-items”, plus a benchmarking “add”/“show” tool) or a NiceGUI web interface. Under the hood it uses DAO abstractions, a central ApplicationContext for run configurations and execution reports, and a pluggable configuration service—making it easy to extend to other clients, boards or storage back ends."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "msgraph-sdk>=1.19.0",
    "o365>=2.0.38",
    "openai>=1.61.1",
    "prettytable>=3.14.0",
    "python-dotenv>=1.0.1",
    "dateparser",
    "nicegui>=2.11.1",
    "click>=8.1.8",
    "pyyaml>=6.0.2",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "supabase>=2.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matai", "src/cli", "src/benchmark"]

[project.scripts]
# pmai = "cli.pmai:cli"
matai-gui="gui.main_gui:_start_gui"
matai-cli="cli.cli:cli"
mat-dat="matai.benchmark.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
timeout = 3

[dependency-groups]
dev = [
    "pyright>=1.1.395",
    "pytest>=8.4.0",
    "pytest-timeout>=2.4.0",
]
