[project]
name = "matai-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ciro Lucio Tecce", email = "c.tecce@reply.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "o365>=2.1.4",
    "openai>=1.92.2",
    "prettytable>=3.16.0",
]

[project.scripts]
matai-v2 = "matai_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "behave>=1.2.6",
    "pytest>=8.4.1",
]
