[project]
name = "matai-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ciro Lucio Tecce", email = "c.tecce@reply.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "lxml>=6.0.0",
    "o365>=2.0.38",
    "openai>=1.92.2",
    "prettytable>=3.16.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
matai-v2 = "matai_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "behave>=1.2.6",
    "pytest>=8.4.1",
]
dev = [
    "ipdb>=0.13.13",
    "pyright>=1.1.402",
]
